--- a/Client/SCSS/main.css
+++ b/Client/SCSS/main.css
@@ -1011,8 +1011,11 @@ body {
   border-bottom: 3px solid red;
   font-weight: bold;
 }
+.locations .bottom .location.active .location-bottom {
+  display: initial;
+}
 .locations .bottom .location {
-  height: 100px;
+  height: 100%;
   border: 2px solid rgb(198, 198, 145);
   padding-right: 12px;
   padding-left: 12px;
@@ -1020,48 +1023,102 @@ body {
   padding-bottom: 8px;
   background-color: rgb(255, 255, 255);
   display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.locations .bottom .location .location-top {
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  height: 100%;
+  display: flex;
   justify-content: space-between;
 }
-.locations .bottom .location .left {
+.locations .bottom .location .location-top .left {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.locations .bottom .location .left h1 {
+.locations .bottom .location .location-top .left h1 {
   margin-bottom: 4px;
   font-size: 18px;
   line-height: 20px;
   font-family: "Flame Bold";
   color: rgb(80, 35, 20);
 }
-.locations .bottom .location .left .mid span {
+.locations .bottom .location .location-top .left .mid span {
   font-size: 13px;
   font-family: "Flame Sans";
   line-height: 20px;
   color: rgb(80, 35, 20);
 }
-.locations .bottom .location .left .functionality {
+.locations .bottom .location .location-top .left .functionality {
   font-size: 13px;
   font-family: "Flame Sans";
   line-height: 20px;
   color: rgb(80, 35, 20);
 }
-.locations .bottom .location .right {
+.locations .bottom .location .location-top .right {
   display: flex;
   justify-content: center;
-  height: 100%;
+  align-items: center;
+  height: 100px;
 }
-.locations .bottom .location .right button {
+.locations .bottom .location .location-top .right button {
+  height: 24px;
   background-color: transparent;
   border: none;
 }
-.locations .bottom .location .right button img {
+.locations .bottom .location .location-top .right button img {
   width: 24px;
   height: 24px;
   display: none;
 }
-.locations .bottom .location .right button img.active {
+.locations .bottom .location .location-top .right button img.active {
+  transition: 1s;
   display: initial;
+}
+.locations .bottom .location .location-bottom {
+  display: none;
+}
+.locations .bottom .location .location-bottom .order-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 50px;
+}
+.locations .bottom .location .location-bottom .order-menu a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 60px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+  text-decoration: none;
+  font-weight: bold;
+}
+.locations .bottom .location .location-bottom .order-menu a button {
+  border: none;
+  height: 50px;
+  width: 50px;
+  background-color: red;
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.locations .bottom .location .location-bottom .order-menu a button img {
+  width: 24px;
+}
+.locations .bottom .location .location-bottom .order-menu a span {
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
 }
 
 .section-delivery {
