--- a/Client/SCSS/Pages/_Delivery.scss
+++ b/Client/SCSS/Pages/_Delivery.scss
@@ -1,71 +1,345 @@
-.section-delivery {
-  @include container();
-  height: 400px;
-  display: flex; //for menu
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  .address {
-    margin-bottom: 4px;
-    font-size: 38px;
-    line-height: 20px;
-    font-family: "Flame Bold";
-    color: rgb(80, 35, 20);
-  }
+// .section-delivery {
+//   @include container();
+//   height: 400px;
+//   display: flex; //for menu
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: center;
+//   gap: 20px;
+//   .address {
+//     margin-bottom: 4px;
+//     font-size: 38px;
+//     line-height: 20px;
+//     font-family: "Flame Bold";
+//     color: rgb(80, 35, 20);
+//   }
 
-  input {
-    width: 100%;
-    outline: none;
-    cursor: auto;
-    background-color: rgb(255, 255, 255);
-    height: 48px;
-    border: 2px solid rgb(198, 198, 145);
-    &:hover {
-      border: 2px solid rgb(136, 136, 99);
-      transition: 0.3s;
+//   input {
+//     width: 100%;
+//     outline: none;
+//     cursor: auto;
+//     background-color: rgb(255, 255, 255);
+//     height: 48px;
+//     border: 2px solid rgb(198, 198, 145);
+//     &:hover {
+//       border: 2px solid rgb(136, 136, 99);
+//       transition: 0.3s;
+//     }
+//     padding-left: 10px;
+
+//     &::placeholder {
+//       font-size: 14px;
+//       font-family: "Flame Sans";
+//       color: rgb(80, 35, 20);
+//     }
+//   }
+
+//   .checkout {
+//     font-family: "Flame Sans";
+//     font-size: 15px;
+//     color: red;
+//   }
+
+//   .terms {
+//     font-size: 14px;
+//     font-family: "Flame Sans";
+//     color: rgb(80, 35, 20);
+
+//     a {
+//       color: red;
+//       text-decoration: none;
+//     }
+//   }
+
+//   button {
+//     &:hover {
+//       opacity: 50%;
+//       transition: 0.3s;
+//     }
+//     cursor: pointer;
+
+//     background-color: rgb(214, 35, 0);
+//     width: 300px;
+//     height: 55px;
+//     border-radius: 9999px;
+//     border: none;
+//     font-size: 18px;
+//     color: white;
+//     font-family: "Flame Sans";
+//     font-weight: bold;
+//   }
+// }
+
+.delivery-navbar {
+  background-color: rgb(214, 35, 0);
+  height: 40px;
+  display: flex;
+  .nav {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @include container();
+    span {
+      width: 1200px;
+      text-align: center;
+      line-height: 32px;
+      font-family: "Flame Bold";
+      font-size: 24px;
+      color: rgb(245, 235, 220);
     }
-    padding-left: 10px;
-
-    &::placeholder {
-      font-size: 14px;
-      font-family: "Flame Sans";
-      color: rgb(80, 35, 20);
-    }
-  }
-
-  .checkout {
-    font-family: "Flame Sans";
-    font-size: 15px;
-    color: red;
-  }
-
-  .terms {
-    font-size: 14px;
-    font-family: "Flame Sans";
-    color: rgb(80, 35, 20);
-
     a {
-      color: red;
-      text-decoration: none;
+      button {
+        &:hover {
+          opacity: 50%;
+          transition: 0.3s;
+        }
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        img {
+          width: 24px;
+          height: 24px;
+        }
+      }
     }
-  }
-
-  button {
-    &:hover {
-      opacity: 50%;
-      transition: 0.3s;
-    }
-    cursor: pointer;
-
-    background-color: rgb(214, 35, 0);
-    width: 300px;
-    height: 55px;
-    border-radius: 9999px;
-    border: none;
-    font-size: 18px;
-    color: white;
-    font-family: "Flame Sans";
-    font-weight: bold;
   }
 }
+
+.selectors {
+  @include container();
+  .selector {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    .top {
+      margin-top: 15px;
+      height: 48px;
+      display: flex;
+      width: 100%;
+      .pick-up {
+        width: 100%;
+        button {
+          height: 100%;
+          width: 100%;
+          background-color: rgb(255, 255, 255);
+          color: rgb(80, 35, 20);
+          font-weight: bold;
+          font-size: 14px;
+          font-family: "Flame Sans";
+          border: none;
+          border: 2px solid rgb(198, 198, 145);
+
+
+          &:hover {
+            border: 2px solid rgb(136, 136, 99);
+            transition: 0.3s;
+          }
+          
+        }
+      }
+
+      .delivery {
+        width: 100%;
+
+        button {
+          background-color: rgb(80, 35, 20);
+
+          height: 100%;
+          width: 100%;
+          font-size: 14px;
+          font-family: "Flame Sans";
+          color: rgb(245, 235, 220);
+
+          &:hover {
+            opacity: 0.8;
+            transition: 0.3s;
+          }
+        }
+      }
+    }
+
+    .bottom {
+      width: 100%;
+
+      input {
+        width: 100%;
+        outline: none;
+        cursor: auto;
+        background-color: rgb(255, 255, 255);
+        height: 48px;
+        border: 2px solid rgb(198, 198, 145);
+        &:hover {
+          border: 2px solid rgb(136, 136, 99);
+          transition: 0.3s;
+        }
+        padding-left: 10px;
+        &::placeholder {
+          font-size: 14px;
+          font-family: "Flame Sans";
+          color: rgb(80, 35, 20);
+        }
+      }
+    }
+  }
+}
+
+.locations {
+  @include container();
+  .top {
+    margin-top: 5px;
+    display: flex;
+    a {
+      width: 100%;
+
+      button {
+        cursor: pointer;
+        font-size: 16px;
+        line-height: 24px;
+        color: rgb(80, 35, 20);
+        width: 100%;
+        height: 48px;
+        background-color: transparent;
+        border: none;
+        font-family: "Flame Sans";
+      }
+      .nearby {
+        color: red;
+        border-bottom: 3px solid red;
+        font-weight: bold;
+      }
+    }
+  }
+
+  .bottom {
+    .location.active {
+      // for js
+
+      .location-bottom {
+        display: initial;
+      }
+    }
+    .location {
+      height: 100%;
+      border: 2px solid rgb(198, 198, 145);
+      padding-right: 12px;
+      padding-left: 12px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      background-color: rgb(255, 255, 255);
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      .location-top {
+        padding-right: 12px;
+        padding-left: 12px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        .left {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+
+          h1 {
+            margin-bottom: 4px;
+            font-size: 18px;
+            line-height: 20px;
+            font-family: "Flame Bold";
+            color: rgb(80, 35, 20);
+          }
+
+          .mid {
+            span {
+              font-size: 13px;
+              font-family: "Flame Sans";
+              line-height: 20px;
+              color: rgb(80, 35, 20);
+            }
+          }
+
+          .functionality {
+            font-size: 13px;
+            font-family: "Flame Sans";
+            line-height: 20px;
+            color: rgb(80, 35, 20);
+          }
+        }
+
+        .right {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100px;
+          button {
+            height: 24px;
+            background-color: transparent;
+            border: none;
+            img {
+              
+              width: 24px;
+              height: 24px;
+              display: none;
+            }
+
+            
+            img.active {
+              transition: 1s;
+              display: initial;
+            }
+          }
+        }
+      }
+
+      .location-bottom {
+        display: none;
+        .order-menu {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          gap: 50px;
+
+          a {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            width: 60px;
+            font-family: "Flame Sans";
+            line-height: 20px;
+            color: rgb(80, 35, 20);
+            text-decoration: none;
+            font-weight: bold;
+
+            button{
+              border: none;
+              height: 50px;
+              width: 50px;
+              background-color: red;
+              border-radius: 9999px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+
+              img{
+                width: 24px;
+              }
+
+            }
+            span{
+              font-family: "Flame Sans";
+              line-height: 20px;
+              color: rgb(80, 35, 20);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
