--- a/Client/SCSS/main.css
+++ b/Client/SCSS/main.css
@@ -73,6 +73,15 @@ table {
   src: url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.eot?#iefix") format("embedded-opentype"), url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.woff2") format("woff2"), url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.woff") format("woff"), url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.ttf") format("truetype"), url("https://db.onlinewebfonts.com/t/565a681be0eb6f1d92c6bc57c629ea35.svg#Flame Bold") format("svg");
 }
 header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1000;
+  transition: top 0.3s ease-in-out;
+}
+
+header {
   height: 104px;
   background-color: rgb(245, 235, 220);
   box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 1.41px;
@@ -217,25 +226,34 @@ header .navbar .bottom a span:nth-child(3) {
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(245, 235, 220);
+  z-index: 1000;
+  transition: bottom 0.3s ease-in-out;
+}
+
+footer {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px -1px 1px;
+}
+footer .footer {
   width: 1200px;
   margin: auto;
+  display: flex;
+  padding: 20px;
 }
 @media screen and (max-width: 1200px) {
-  footer {
+  footer .footer {
     width: 767px;
     margin: auto;
   }
 }
 @media screen and (max-width: 767px) {
-  footer {
+  footer .footer {
     width: 375px;
     margin: auto;
   }
-}
-footer .footer {
-  display: flex;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px -1px 1px;
-  padding: 20px;
 }
 footer .footer div {
   width: 100%;
@@ -1121,36 +1139,117 @@ body {
   color: rgb(80, 35, 20);
 }
 
-.section-delivery {
-  width: 1200px;
-  margin: auto;
-  height: 400px;
+.delivery-navbar {
+  background-color: rgb(214, 35, 0);
+  height: 40px;
   display: flex;
-  flex-direction: column;
+}
+.delivery-navbar .nav {
+  text-align: center;
+  display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  width: 1200px;
+  margin: auto;
 }
 @media screen and (max-width: 1200px) {
-  .section-delivery {
+  .delivery-navbar .nav {
     width: 767px;
     margin: auto;
   }
 }
 @media screen and (max-width: 767px) {
-  .section-delivery {
+  .delivery-navbar .nav {
     width: 375px;
     margin: auto;
   }
 }
-.section-delivery .address {
-  margin-bottom: 4px;
-  font-size: 38px;
-  line-height: 20px;
+.delivery-navbar .nav span {
+  width: 1200px;
+  text-align: center;
+  line-height: 32px;
   font-family: "Flame Bold";
-  color: rgb(80, 35, 20);
+  font-size: 24px;
+  color: rgb(245, 235, 220);
 }
-.section-delivery input {
+.delivery-navbar .nav a button {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+.delivery-navbar .nav a button:hover {
+  opacity: 50%;
+  transition: 0.3s;
+}
+.delivery-navbar .nav a button img {
+  width: 24px;
+  height: 24px;
+}
+
+.selectors {
+  width: 1200px;
+  margin: auto;
+}
+@media screen and (max-width: 1200px) {
+  .selectors {
+    width: 767px;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .selectors {
+    width: 375px;
+    margin: auto;
+  }
+}
+.selectors .selector {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.selectors .selector .top {
+  margin-top: 15px;
+  height: 48px;
+  display: flex;
+  width: 100%;
+}
+.selectors .selector .top .pick-up {
+  width: 100%;
+}
+.selectors .selector .top .pick-up button {
+  height: 100%;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  color: rgb(80, 35, 20);
+  font-weight: bold;
+  font-size: 14px;
+  font-family: "Flame Sans";
+  border: none;
+  border: 2px solid rgb(198, 198, 145);
+}
+.selectors .selector .top .pick-up button:hover {
+  border: 2px solid rgb(136, 136, 99);
+  transition: 0.3s;
+}
+.selectors .selector .top .delivery {
+  width: 100%;
+}
+.selectors .selector .top .delivery button {
+  background-color: rgb(80, 35, 20);
+  height: 100%;
+  width: 100%;
+  font-size: 14px;
+  font-family: "Flame Sans";
+  color: rgb(245, 235, 220);
+}
+.selectors .selector .top .delivery button:hover {
+  opacity: 0.8;
+  transition: 0.3s;
+}
+.selectors .selector .bottom {
+  width: 100%;
+}
+.selectors .selector .bottom input {
   width: 100%;
   outline: none;
   cursor: auto;
@@ -1159,49 +1258,168 @@ body {
   border: 2px solid rgb(198, 198, 145);
   padding-left: 10px;
 }
-.section-delivery input:hover {
+.selectors .selector .bottom input:hover {
   border: 2px solid rgb(136, 136, 99);
   transition: 0.3s;
 }
-.section-delivery input::-moz-placeholder {
+.selectors .selector .bottom input::-moz-placeholder {
   font-size: 14px;
   font-family: "Flame Sans";
   color: rgb(80, 35, 20);
 }
-.section-delivery input::placeholder {
+.selectors .selector .bottom input::placeholder {
   font-size: 14px;
   font-family: "Flame Sans";
   color: rgb(80, 35, 20);
 }
-.section-delivery .checkout {
-  font-family: "Flame Sans";
-  font-size: 15px;
-  color: red;
+
+.locations {
+  width: 1200px;
+  margin: auto;
 }
-.section-delivery .terms {
-  font-size: 14px;
-  font-family: "Flame Sans";
-  color: rgb(80, 35, 20);
+@media screen and (max-width: 1200px) {
+  .locations {
+    width: 767px;
+    margin: auto;
+  }
 }
-.section-delivery .terms a {
-  color: red;
-  text-decoration: none;
+@media screen and (max-width: 767px) {
+  .locations {
+    width: 375px;
+    margin: auto;
+  }
 }
-.section-delivery button {
+.locations .top {
+  margin-top: 5px;
+  display: flex;
+}
+.locations .top a {
+  width: 100%;
+}
+.locations .top a button {
   cursor: pointer;
-  background-color: rgb(214, 35, 0);
-  width: 300px;
-  height: 55px;
-  border-radius: 9999px;
+  font-size: 16px;
+  line-height: 24px;
+  color: rgb(80, 35, 20);
+  width: 100%;
+  height: 48px;
+  background-color: transparent;
   border: none;
-  font-size: 18px;
-  color: white;
   font-family: "Flame Sans";
+}
+.locations .top a .nearby {
+  color: red;
+  border-bottom: 3px solid red;
   font-weight: bold;
 }
-.section-delivery button:hover {
-  opacity: 50%;
-  transition: 0.3s;
+.locations .bottom .location.active .location-bottom {
+  display: initial;
+}
+.locations .bottom .location {
+  height: 100%;
+  border: 2px solid rgb(198, 198, 145);
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.locations .bottom .location .location-top {
+  padding-right: 12px;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.locations .bottom .location .location-top .left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.locations .bottom .location .location-top .left h1 {
+  margin-bottom: 4px;
+  font-size: 18px;
+  line-height: 20px;
+  font-family: "Flame Bold";
+  color: rgb(80, 35, 20);
+}
+.locations .bottom .location .location-top .left .mid span {
+  font-size: 13px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+.locations .bottom .location .location-top .left .functionality {
+  font-size: 13px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+}
+.locations .bottom .location .location-top .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
+.locations .bottom .location .location-top .right button {
+  height: 24px;
+  background-color: transparent;
+  border: none;
+}
+.locations .bottom .location .location-top .right button img {
+  width: 24px;
+  height: 24px;
+  display: none;
+}
+.locations .bottom .location .location-top .right button img.active {
+  transition: 1s;
+  display: initial;
+}
+.locations .bottom .location .location-bottom {
+  display: none;
+}
+.locations .bottom .location .location-bottom .order-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 50px;
+}
+.locations .bottom .location .location-bottom .order-menu a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 60px;
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
+  text-decoration: none;
+  font-weight: bold;
+}
+.locations .bottom .location .location-bottom .order-menu a button {
+  border: none;
+  height: 50px;
+  width: 50px;
+  background-color: red;
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.locations .bottom .location .location-bottom .order-menu a button img {
+  width: 24px;
+}
+.locations .bottom .location .location-bottom .order-menu a span {
+  font-family: "Flame Sans";
+  line-height: 20px;
+  color: rgb(80, 35, 20);
 }
 
 .sign-up {
