--- a/Client/SCSS/Pages/_Location.scss
+++ b/Client/SCSS/Pages/_Location.scss
@@ -34,7 +34,7 @@
   }
 }
 
-.selectors {
+.location-selectors {
   @include container();
   .selector {
     display: flex;
@@ -51,9 +51,9 @@
           height: 100%;
           width: 100%;
           background-color: rgb(80, 35, 20);
+          color: rgb(245, 235, 220);
           font-size: 14px;
           font-family: "Flame Sans";
-          color: rgb(245, 235, 220);
           border: none;
 
           &:hover {
@@ -107,7 +107,7 @@
   }
 }
 
-.locations {
+.location-locations {
   @include container();
   .top {
     margin-top: 5px;
@@ -202,13 +202,11 @@
             background-color: transparent;
             border: none;
             img {
-              
               width: 24px;
               height: 24px;
               display: none;
             }
 
-            
             img.active {
               transition: 1s;
               display: initial;
@@ -239,7 +237,7 @@
             text-decoration: none;
             font-weight: bold;
 
-            button{
+            button {
               border: none;
               height: 50px;
               width: 50px;
@@ -249,12 +247,11 @@
               align-items: center;
               justify-content: center;
 
-              img{
+              img {
                 width: 24px;
               }
-
             }
-            span{
+            span {
               font-family: "Flame Sans";
               line-height: 20px;
               color: rgb(80, 35, 20);
