--- a/Client/SCSS/main.scss
+++ b/Client/SCSS/main.scss
@@ -24,4 +24,6 @@
 @import "./Pages/Location";
 @import "./Pages/Delivery";
 @import "./Pages/SignUp";
+@import "./Pages/SingIn";
 @import "./Pages/Menu";
+@import "./Pages/SubMenu";
