--- a/Client/SCSS/Pages/_Detail.scss
+++ b/Client/SCSS/Pages/_Detail.scss
@@ -195,6 +195,8 @@
 
 .section-detail-add-order {
   margin-top: 10px;
+  padding-top: 20px;
+ 
   @include container();
   .text {
     span {
@@ -288,6 +290,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  padding-top: 20px;
   .top {
     display: flex;
     align-items: center;
